# inventory-app

./: .cfignore  .env  .env.sample  .gitattributes  .gitignore  .profile  .snyk  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Dockerfile.vendor  Jenkinsfile  LICENSE.md  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  cfsetup.sh  cfstart.sh  create-cloudgov-services.sh  credentials.json.template  datastore-usersetup.py  docker-compose.debug.yml  docker-compose.local.yml  docker-compose.seed.yml  docker-compose.test.yml  docker-compose.yml  docker_test.ini  entrypoint-docker.sh  env_file  freeze-requirements.sh  install-dev.sh  manifest.yml  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements.in.txt  requirements.txt  scan.json  (+13 more)
.circleci/: config.yml
.github/: deploy-failure.md  pull_request_template.md  restart-failure.md
.github/ISSUE_TEMPLATE/: restart_issue.md
.github/workflows/: add_to_project.yml  codeql.yml  commit.yml  deploy-template.yml  deploy.yml  publish.yml  restart.yml  snyk.yml  update_publishers.yml
ckanext-datagov_iauthfunctions/: MANIFEST.in  README.rst  setup.cfg  setup.py
ckanext-datagov_iauthfunctions/ckanext/datagov_iauthfunctions/: plugin.py
ckanext-datagov_iauthfunctions/ckanext/datagov_iauthfunctions/tests/: test_plugin.py
ckanext-datagov_inventory/: MANIFEST.in  README.md  README.rst  setup.py
ckanext-datagov_inventory/ckanext/datagov_inventory/: .plugin.py.swp  plugin.py
ckanext-datagov_inventory/ckanext/datagov_inventory/templates/: error_document_template.html
ckanext-datagov_inventory/ckanext/datagov_inventory/tests/: test_plugin.py
ckanext/datagov_inventory/: action.py  plugin.py
ckanext/datagov_inventory/fanstatic/: webassets.yml
ckanext/datagov_inventory/templates/: base.html  error_document_template.html  user_org_roles_table.html
ckanext/datagov_inventory/templates/error/: anonymous.html
ckanext/datagov_inventory/tests/: test_resource_modified.py  test_security_headers.py
config/: GSA_prerun.py  ckan.ini  development.ini  login.production.idp.xml  login.sandbox.idp.xml  newrelic.ini  prerun.py  production.ini  server_start.sh  startup_validation.py  test.csv  who.ini  wsgi.py
config/data/: README.md  inventory_publishers.csv
config/saml2/: idp.xml
datapusher/: Dockerfile
datapusher/setup/: datapusher_settings.py  wsgi.py
datastore/docker-entrypoint-initdb.d/: datastore_ro.sql
e2e/: 00-setup-cypress-user.sh  cypress.config.js  cypress.json  package-lock.json  package.json
e2e/cypress/fixtures/: ckan_dataset.json  ckan_resource.csv  ckan_sub_dataset.json  draft_data_1.json  draft_data_2.json
e2e/cypress/integration/: ckan_extensions.cy.js  ckan_extensions.spec.js  ckan_token.cy.js  dataset.cy.js  dataset.spec.js  datastore.cy.js  datastore.spec.js  dcat_us_export.cy.js  dcat_us_export.spec.js  load_main_page.spec.js  login.spec.js  main_page.cy.js  main_page.spec.js  organizations.cy.js  organizations.spec.js  public_access.cy.js  public_access.spec.js  user_org_roles.cy.js  user_permission.cy.js
e2e/cypress/plugins/: index.js
e2e/cypress/results/: output.xml
e2e/cypress/support/: command.js
proxy/: nginx.conf
proxy/public/: maintenance.html
redis/: redis.conf
solr/: local_setup.sh  migrate-solrcloud-schema.sh  restore_backups.sh  service-config-development.json  service-config.json  solr_setup.sh
tests/: draft_data_1.json  draft_data_2.json  draft_data_3.json  test.bats  test_startup_validation.py
tmp/localstack/: server.test.pem  server.test.pem.crt  server.test.pem.key  sqs.3ec424c7.conf
tmp/localstack/data/: recorded_api_calls.json
(+7 files in other folders)
